# postgresql-parsing

./: postgresql-grammar.ebnf
postgresql-parser-node/: Cargo.toml  package-lock.json  package.json
postgresql-parser-node/src/: lib.rs
postgresql_language_server/: Cargo.toml
postgresql_language_server/src/: main.rs
postgresql_lsp/: Cargo.toml
postgresql_lsp/src/: main.rs
postgresql_parser_core/: Cargo.toml
postgresql_parser_core/src/: lib.rs  test_utils.rs
postgresql_parser_core/src/lexer/: mod.rs  token.rs
postgresql_parser_core/src/parser/: ast.rs  keywords.rs  mod.rs  parse_command_result.rs  utils.rs
postgresql_parser_core/src/parser/commands/: empty.rs  mod.rs  parse_section.rs  select.rs
postgresql_parser_core/src/parser/commands/sections/: comma.rs  dot.rs  dot_separated_value.rs  from_item.rs  identifier.rs  keywords.rs  mod.rs  selected_expressions.rs  semicolon.rs  star.rs  whitespace.rs
postgresql_parser_core/tests/: integration_tests.rs
