[package]
name = "postgresql-parser-node"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
postgresql_parser_core = { path = "../postgresql_parser_core" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
